@@ -151,6 +151,8 @@
                     <excludes>
                         <exclude>**/jdbc/*Test.java</exclude>
                     </excludes>
+                    <!-- Add opens for LMDB tests -->
+                    <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
